# dsa-heldenbogen

./: .gitignore  .pylintrc  CONTRIBUTE.md  HINTS.md  HISTORY.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.run/: DSAHB (python cli).run.xml  DSAHB (uvicorn cli).run.xml
app/: error.py  logger.py  main.py  resource.py  root.py
app/api/: __init__.py  api.py  root.py
app/db/: base.py  session.py
app/engine/: __init__.py  clingo_engine.py  clingo_wrapper.py  collector.py  engine.py  errors.py  exceptions.py  hero_validation_error.py  hero_validation_interpreter.py  hero_validation_warning.py  hero_wrapper.py  regelset.py  regelwerk.py  resource.py  rulebook_function.py  rulebook_program.py  rulebook_validator.py
app/infrastructure/: __init__.py  clingo_engine.py  clingo_executor.py  hero_wrapper.py
app/models/: Basiswert.py  Fertigkeit.py  Held.py  Kultur.py  Merkmal.py  Nachteil.py  Profession.py  Spezies.py  Vorteil.py  __init__.py  base_enum.py  basevalue.py  characteristic.py  dis_advantage.py  eigenschaft.py  experience_level.py  feature.py  fertigkeit.py  held.py  hero.py  hero_validation_error.py  hero_validation_param.py  hero_validation_warning.py  kultur.py  merkmal.py  nachteil.py  profession.py  rulebook.py  skill.py  spezies.py  vorteil.py
docs/: CHEATSHEET.lp  CONTRIBUTE.md  CREATE_A_RULEBOOK.md  TODOs.md
dsa_heldenbogen/: app.py  main.py  openapi_util.py
dsaheldenbogen/: main.py
resources/: CHEATSHEET.lp  hero_facts.lp
scripts/: env.sh  run_tests.sh  start_server.sh
src/: main.py
tests/: TESTER.lp  TESTER.py  base_test_case.py  clingo_context_example.py  clingo_playground.lp  clingo_playground.py  example.lp  example.py  example2.lp  example2.py  heros.py  invalid_heros.py  loadtest.json  loadtest.sh  rulebook_tester.py  test_resources_rulebooks.py  valid_heros.py
tools/: clingo_playground.py
(+251 files in other folders)
