[tool.poetry]
name = "dsa-heldenbogen"
version = "0.1.0"
description = ""
authors = ["bjoern-nowak <dsa-heldenbogen@nowakhub.de>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "~3.11"
## python API for anwer set programming (ASP) by Potassco
clingo = "5.6.2"
## web server deps
fastapi = "0.94.1"
uvicorn = { extras = ["standard"], version = "0.21.0" }


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pylint = "^2.15.10"
isort = "^5.12.0"
black = "^22.12.0"
autopep8 = "^2.0.1"
yapf = "^0.32.0"
bandit = "^1.7.4"
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
